added profile, and also completed gateway for all User-Management Routes
