# src/gateway/api.yml
@@ -59,3 +59,154 @@ paths:
           description: Bad request. Invalid input data
         '500':
           description: Internal server error. Something went wrong
+  /auth/activate:
+    post:
+      summary: Activate user account
+      description: Activates a user account using email and OTP.
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - Authentication
+      parameters:
+        - name: body
+          in: body
+          description: Request body
+          required: true
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+                format: email
+                description: Email address of the user.
+              otp:
+                type: string
+                description: One-time password sent to the user.
+      responses:
+        '200':
+          description: Account activated successfully
+          schema:
+            type: object
+            properties:
+              success:
+                type: boolean
+                description: Indicates whether the operation was successful.
+                example: true
+              message:
+                type: string
+                description: A message indicating the result of the operation.
+                example: Account activated successfully
+        '400':
+          description: Bad request
+        '403':
+          description: Forbidden - Invalid OTP
+        '404':
+          description: Not Found - User not found
+
+  /auth/signIn:
+    post:
+      summary: Sign in to the application
+      description: Signs in a user using email and password.
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - Authentication
+      parameters:
+        - name: body
+          in: body
+          description: Request body
+          required: true
+          schema:
+            type: object
+            properties:
+              email:
+                type: string
+                format: email
+                description: Email address of the user.
+              password:
+                type: string
+                description: User password.
+      responses:
+        '200':
+          description: Successful sign-in
+          schema:
+            type: object
+            properties:
+              userId:
+                type: string
+                description: ID of the signed-in user.
+                example: "123456"
+              role:
+                type: string
+                description: Role of the signed-in user.
+                example: "user"
+              email:
+                type: string
+                format: email
+                description: Email address of the signed-in user.
+                example: "user@example.com"
+              name:
+                type: string
+                description: Name of the signed-in user.
+                example: "John Doe"
+              activated:
+                type: boolean
+                description: Indicates whether the user account is activated.
+                example: true
+              token:
+                type: string
+                description: Authentication token for the signed-in user.
+                example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+        '400':
+          description: Bad request - Mandatory fields missing
+        '401':
+          description: Unauthorized - Invalid credentials
+        '404':
+          description: Not Found - User not found
+
+  /profile:
+    get:
+      summary: Retrieve user profile
+      description: |
+        Retrieves the profile details of a user.
+      tags:
+        - Profile
+      security:
+        - BearerAuth: []
+      responses:
+        200:
+          description: Successful response
+          schema:
+            type: object
+            properties:
+              success:
+                type: boolean
+              message:
+                type: string
+              details:
+                type: object
+                properties:
+                  name:
+                    type: string
+                  creationDate:
+                    type: string
+                    format: date-time
+                  email:
+                    type: string
+                  age:
+                    type: integer
+                  gender:
+                    type: string
+        404:
+          description: User not found
+
+securityDefinitions:
+  BearerAuth:
+    type: apiKey
+    name: Authorization
+    in: header
+    description: Use 'Bearer <token>' format
