# src/gateway/src/routes/auth.js
@@ -13,4 +13,24 @@ AuthRouter.post('/signUp', async (req, res, next) => {
   }
 })
 
+AuthRouter.post('/activate', async (req, res, next) => {
+  try {
+    const baseUrl = await ServiceRegistryClient.getUrl('User-Management')
+    const targetUrl = new URL('/api/activate-account', baseUrl).toString()
+    await proxy(req, res, targetUrl)
+  } catch (e) {
+    next(e)
+  }
+})
+
+AuthRouter.post('/signIn', async (req, res, next) => {
+  try {
+    const baseUrl = await ServiceRegistryClient.getUrl('User-Management')
+    const targetUrl = new URL('/api/signIn', baseUrl).toString()
+    await proxy(req, res, targetUrl)
+  } catch (e) {
+    next(e)
+  }
+})
+
 module.exports = AuthRouter
